--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,10 @@
 version: "3.8"
 
 services:
-  api:
+  frontend:
     container_name: vybes-employees-frontend
     build: .
-    command: sh -c "npm start"
     ports:
       - "3000:3000"
     volumes:
-      - ./:/app
+      - ./:/home/node/app
