--- a/package.json
+++ b/package.json
@@ -34,10 +34,11 @@
     "simplebar-react": "^2.3.5",
     "stylis": "^4.0.10",
     "typescript": "^4.1.2",
-    "yup": "^0.32.9"
+    "yup": "^0.32.9",
+    "zustand": "^4.3.2"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "npx react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
